testsuite/tests/rep-poly/RepPolyDoBind.stderr

RepPolyDoBind.hs:26:3: error:
    • The first argument of the rebindable syntax operator ‘(>>=)’
        arising from a do statement
      does not have a fixed runtime representation.
      Its type is:
        ma0 :: TYPE c0
      Cannot unify ‘rep’ with the type variable ‘c0’
      because it is not a concrete ‘RuntimeRep’.
    • In a stmt of a 'do' block: a <- undefined
      In the expression:
        do a <- undefined
           return ()
      In an equation for ‘foo’:
          foo _
            = do a <- undefined
                 return ()
    • Relevant bindings include
        foo :: () -> ma (bound at RepPolyDoBind.hs:25:1)
